# Draft-Email-writer-using-voice-instructions

./: .gitignore  README.md  crewai_flow.html  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
src/: secrets.json
src/email_draft/: main.py
src/email_draft/crews/gmail_crew/: gmail_crew.py
src/email_draft/crews/gmail_crew/config/: agents.yaml
src/email_draft/crews/gmail_crew/tools/: gmail_tool.py  gmail_utility.py
src/email_draft/crews/meeting_minutes_crew/: meeting_minutes_crew.py
