[project]
name = "email_draft"
version = "0.1.0"
description = "email_draft using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
]

[project.scripts]
kickoff = "email_draft.main:kickoff"
run_crew = "email_draft.main:kickoff"
plot = "email_draft.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
